# neural-network-library

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  XOR_train.cpp
include/: ActivationFunctions.hpp  ActivationLayer.hpp  ActivationLayers.hpp  DenseLayer.hpp  Layer.hpp  LossFunctions.hpp  Network.hpp
src/: ActivationFunctions.cpp  ActivationLayer.cpp  DenseLayer.cpp  LossFunctions.cpp  Network.cpp
tests/: CMakeLists.txt  test_activation-fns.cpp  test_layers.cpp  test_loss-fns.cpp  test_network.cpp
